// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardControls renders correctly when showConflict is false 1`] = `
<div>
  <div
    class="flex flex-row gap-6 items-center justify-even"
  >
    <button
      class="flex items-center gap-2"
      data-testid="reset"
    >
      <div
        class="text-xs w-6 h-6 flex justify-center items-center bg-white shadow-sm rounded-md font-semibold border-2"
      >
        R
      </div>
      <div>
        Reset
      </div>
    </button>
    <button
      class="flex items-center gap-2"
      data-testid="new"
    >
      <div
        class="text-xs w-6 h-6 flex justify-center items-center bg-white shadow-sm rounded-md font-semibold border-2"
      >
        N
      </div>
      <div>
        New Game
      </div>
    </button>
    <button
      class="flex items-center gap-2"
      data-testid="undo"
    >
      <div
        class="text-xs w-6 h-6 flex justify-center items-center bg-white shadow-sm rounded-md font-semibold border-2"
      >
        Z
      </div>
      <div>
        Undo
      </div>
    </button>
    <button
      class="flex items-center gap-2"
      data-testid="toggle"
    >
      <div
        class="text-xs w-6 h-6 flex justify-center items-center bg-white shadow-sm rounded-md font-semibold border-2"
      >
        E
      </div>
      <div>
        Highlight errors
      </div>
    </button>
  </div>
</div>
`;

exports[`KeyboardControls renders correctly when showConflict is true 1`] = `
<div>
  <div
    class="flex flex-row gap-6 items-center justify-even"
  >
    <button
      class="flex items-center gap-2"
      data-testid="reset"
    >
      <div
        class="text-xs w-6 h-6 flex justify-center items-center bg-white shadow-sm rounded-md font-semibold border-2"
      >
        R
      </div>
      <div>
        Reset
      </div>
    </button>
    <button
      class="flex items-center gap-2"
      data-testid="new"
    >
      <div
        class="text-xs w-6 h-6 flex justify-center items-center bg-white shadow-sm rounded-md font-semibold border-2"
      >
        N
      </div>
      <div>
        New Game
      </div>
    </button>
    <button
      class="flex items-center gap-2"
      data-testid="undo"
    >
      <div
        class="text-xs w-6 h-6 flex justify-center items-center bg-white shadow-sm rounded-md font-semibold border-2"
      >
        Z
      </div>
      <div>
        Undo
      </div>
    </button>
    <button
      class="flex items-center gap-2"
      data-testid="toggle"
    >
      <div
        class="text-xs w-6 h-6 flex justify-center items-center bg-white shadow-sm rounded-md font-semibold border-2"
      >
        E
      </div>
      <div>
        Hide errors
      </div>
    </button>
  </div>
</div>
`;
